Layout Changes * Updated header bar to have a grid layout * Changed 'View Yearly Totals' to 'Toggle Yearly Totals' * Made 'Toggle Yearly Totals' button only visible AFTER data has been uploaded. * 'Toggle Yearly Totals' button is now located at the bottom of the yearly totals list. * Minor spacing issues with varies data elements.

--- a/TopTrailHorseExtractor/Shared/MainLayout.razor.css
+++ b/TopTrailHorseExtractor/Shared/MainLayout.razor.css
@@ -12,6 +12,31 @@ main {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
 
+.header {
+    display: grid;
+    grid-gap: 0px;
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #d6d5d5;
+    height: 3.5rem;
+    align-items: center;
+}
+.about {
+    grid-column: 80;
+}
+
+.title {
+    grid-column: 3;
+}
+
+.link {
+    text-decoration: none;
+}
+
+.link:hover {
+    text-decoration: underline;
+}
+
+
 .top-row {
     background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
@@ -20,7 +45,6 @@ main {
     display: flex;
     align-items: center;
 }
-
     .top-row ::deep a, .top-row ::deep .btn-link {
         white-space: nowrap;
         margin-left: 1.5rem;
